force-app/main/default/objects/InvoiceItem__c/InvoiceItem__c.object-meta.xml
<CustomObject>
    <description>An Invoice Item is an incentivized product or service charged on an Invoice.</description>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>IT-{00000000}</displayFormat>
        <label>Invoice Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>