force-app/main/default/objects/InvoiceItem__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>An identifying description of an Invoice Item. Only used when not identifying an item with a lookup to Product2 or any other Salesforce object.</description>
    <inlineHelpText>Enter an identifying description for the Invoice Item.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>