force-app/main/default/objects/InvoiceItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>The quantity of an Invoice Item purchased.</description>
    <inlineHelpText>Enter the quantity purchased of the item.</inlineHelpText>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>