force-app/main/default/objects/InvoiceItem__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>The price per unit of an Invoice Item.</description>
    <inlineHelpText>Enter the price per unit of the item purchased.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>