force-app/main/default/objects/InvoiceItem__c/validationRules/ValidateInvoiceNull.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateInvoiceNull</fullName>
    <active>true</active>
    <description>This Invoice Item must be associated with an Invoice.</description>
    <errorConditionFormula>ISBLANK( Invoice__c )</errorConditionFormula>
    <errorMessage>This Invoice Item must be associated with an Invoice.</errorMessage>
</ValidationRule>