force-app/main/default/objects/InvoiceItem__c/validationRules/ValidateInvoiceUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateInvoiceUpdate</fullName>
    <active>true</active>
    <description>You cannot change the Invoice associated with an Invoice Item.</description>
    <errorConditionFormula>AND(
 ISCHANGED( Invoice__c ),
 NOT(ISBLANK(PRIORVALUE(Invoice__c))),
 PRIORVALUE(Invoice__c)!=Invoice__c
)</errorConditionFormula>
    <errorMessage>You cannot change the Invoice associated with an Invoice Item.</errorMessage>
</ValidationRule>